# matchmakeo

./: .gitignore  LICENSE  Makefile  README.md  examples.py  notes.md  pyproject.toml
src/matchmakeo/: catalogues.py  databases.py  examples.py  field.py  modis_footprints.py  product.py  queryset.py  utils.py
tests/: conftest.py  test_catalogues.py  test_databases.py  test_utils.py
