[project]
authors = [
    {name = "David Wilby", email = "dalby@bas.ac.uk"}
]
name = "matchmakeo"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.optional-dependencies]
docs = ["mkdocs"]
test = ["pytest"]
dev = ["ruff"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
matchmakeo = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.11"
