[project]
authors = [
    {name = "Tom Kelly", email = "thokel@bas.ac.uk"},
    {name = "David Wilby", email = "dalby@bas.ac.uk"}
]
name = "matchmakeo"
license = { file = "LICENSE" }
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
    "requests>=2.32.3,<3",
    "sqlalchemy",
    ]

# [project.urls]
# Homepage = "https://github.com/bas-quasar/matchmakeo"
# Repository = "https://github.com/bas-quasar/matchmakeo.git"
# Issues = "https://github.com/bas-quasar/matchmakeo/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.optional-dependencies]
cds = ["cdsapi"]
earthengine = ["earthengine-api"]
postgis = ["psycopg[binary]>3"]
spatialite = ["spatialite"]
docs = ["mkdocs"]
test = ["pytest"]
dev = ["ruff"]
diagram = ["py2puml"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
matchmakeo = { path = ".", editable = true }

[tool.pixi.environments]
test = ["test"]
dev = {features = ["test", "docs"], solve-group = "default"}
# diagram = {features = ["diagram"], solve-group = "diagram"}


[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.dependencies]
python = ">=3.11"

# [tool.pixi.feature.diagram.tasks]
# diagram = "python -m py2puml"

